Challenge - organize the features

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,27 @@ h1 {
 .navbar {
     padding-bottom: 4.5rem;
 }
+
+h3 {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+p {
+    color: #8f8f8f;
+}
+
+.icon-feature {
+    color: #efB172;
+    margin-bottom: 8px;
+}
+
+.icon-feature:hover {
+    color: #ff4c68;
+}
+
+.row {
+    text-align: center;
+    margin: 50px;
+}
