--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ h1 {
   color: rgb(255, 255, 255);
 }
 
+h2 {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 3rem;
+}
+
 h3 {
   font-size: 1.5rem;
   font-family: "Montserrat", sans-serif;
@@ -61,4 +67,34 @@ p {
 
 .icon-feature:hover {
   color: #ff4c68;
+}
+
+/* testimonials */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
